# us_diplomatic_missions

./: .gitignore  .gitmodules  .rgignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: pages.yml  release.yml
data/v0.1/: CODEBOOK_us_mission_status_v0.1.md  mission_status_range_cow_v0.1.csv  mission_status_range_gw_v0.1.csv  mission_status_range_gwm_v0.1.csv  mission_status_yearly_cow_v0.1.csv  mission_status_yearly_gw_v0.1.csv  mission_status_yearly_gwm_v0.1.csv
data_assembly/: aggregator.py  codebook_builder.py  daily_builder.py  diagnostics.py  generate.py  generate_web.py  panel.py  range_builder.py  state_codes.py  status.py  timeline.py  version.py
data_assembly/codebook/: 01_overview.md  02_data_products.md  03_statuses.md  04_columns.md  05_daily_generation.md  06_state_systems.md  (+3 more)
input/: 2024-01-16_transitions.csv  country_aliases.yaml  cowstates_mod.csv  extraction_config.yaml  gwstates_mod.csv  manual_reconciliation.yaml  prompt_extract.txt  prompt_reconcile.txt  state_system_codes.yaml  suggested_reconciliation.yaml
instructions/: data_product.md  extraction_pipeline.md
scripts/: convert_mapping_format.py  migrate_state_codes.py  verify_state_codes.py
transition_extraction/: __init__.py  api_client.py  assemble.py  audit_report.py  config.py  diagnose.py  models.py  stage0_resolve.py  stage1_preprocess.py  stage2_extract.py  stage3_verify.py  stage4_reconcile.py  text_utils.py  xml_parsers.py
web/: _quarto.yml  codebook.qmd  download.qmd  index.qmd  styles.css  styles.scss
(+633 files in other folders)
