[project]
name = "us-diplomatic-missions"
version = "0.1"
description = "Panel data on U.S. diplomatic mission status, validated against State Department XML sources"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Brenton Kenkel"}]
dependencies = [
    "anthropic>=0.84.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "unidecode>=1.4.0",
]
